--- a/src/components/Development Plan/dev-plan.css
+++ b/src/components/Development Plan/dev-plan.css
@@ -23,5 +23,14 @@ body {
     border-radius: 7px;
     border-width: 1px;
     font-family: cursive;
-    margin-bottom: 10px;
+    margin: 0px 0px 10px 50px;
+}
+.edit-button {
+    background-color: #00bfff;
+    padding: 5px 5px 5px 5px;
+    border-color: black;
+    border-radius: 7px;
+    border-width: 1px;
+    font-family: cursive;
+    margin: 0px 0px 10px 20px;
 }
